k8s/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: iteam1337/digiby-backend
          ports:
            - containerPort: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - digiby.predictivemovement.se
      secretName: digiby-stage-tls
  rules:
    - host: digiby.predictivemovement.se
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: 
                name: backend
                port:
                  number: 4000
